--- a/Sources/Applications.tex
+++ b/Sources/Applications.tex
@@ -1,6 +1,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Extensible Designs}
+\chapter{Case Study: Modularizing Language Components}
+\label{chap:case_study}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 To further illustrate the applicability of \sedel, we present a case
@@ -124,11 +125,6 @@ create an object \lstinline{o} that supports both evaluation and printing in one
 \lstinputlisting[linerange=72-73]{./examples/application.sl}% APPLY:linerange=USE
 
 
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Case Study: Modularizing Language Components}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 \begin{figure}[t]
