--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -15,9 +15,10 @@
 \end{center}
 
 
-Here is the start\index{start} of my document.
+% Here is the start\index{start} of my document.
 
 
+\input{Sources/Traits/introduction.tex}
 
 
 \section{Structure}
