--- a/Sources/Polymorphism.tex
+++ b/Sources/Polymorphism.tex
@@ -1,6 +1,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Semantics of the \fnamee Calculus}
+\label{chap:fi}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 In this chapter, we are going to enrich \namee with parametric polymorphism. As
