--- a/Sources/Traits.tex
+++ b/Sources/Traits.tex
@@ -9,8 +9,16 @@
     {#4}
 }
 
+In this chapter and \cref{chap:case_study}, we present two applications of
+\fnamee. This chapter is concerned with building a source-level language named
+\sedel that features \textit{typed first-class traits}. In particular we show
+how to model source-level constructs for first-class traits and dynamic
+inheritance, supporting standard object-oriented features such as dynamic
+dispatching and abstract methods. It is remarkable that all of these can be
+explained by plain \fnamee expressions, showing its supreme expressive power.
+In \cref{chap:case_study} we conduct a case study of modularizing programming
+language features by the means of first-class traits.
 
-\input{Sources/Traits/introduction.tex}
 \input{Sources/Traits/overview.tex}
 \input{Sources/Traits/traits.tex}
 \input{Sources/Traits/typesystem.mng}
