--- a/packages.tex
+++ b/packages.tex
@@ -34,7 +34,7 @@
 \usepackage{listings}
 
 \lstset{%
-  backgroundcolor=\color{white},
+  % backgroundcolor=\color{white},
   basicstyle=\small\ttfamily,
   keywordstyle=\sffamily\bfseries,
   captionpos=none,
@@ -54,7 +54,7 @@
 }
 
 \lstdefinelanguage{sedel}{
-  keywords={Int, Bool, String, this, inherits, super, type, Trait, override, new, if, then, else, let, in},
+  keywords={Int, Bool, String, this, inherits, super, type, Trait, override, new, if, then, else, let, in, letrec},
   identifierstyle=\color{black},
   morecomment=[l]{--},
   morecomment=[l]{//},
